# capturecare-v7-production

./: .gcloudignore  .gitignore  .replit  APPOINTMENT_FIXES_SUMMARY.md  BACKUP_20251107_184712.md  BACKUP_SUMMARY.txt  CALENDAR_FIX_COMPLETE.md  CHANGELOG_IMPROVEMENTS.md  COMMUNICATIONS_ENHANCEMENT.md  COMMUNICATIONS_USER_GUIDE.md  COMPANY_ASSETS_DEPLOYMENT.md  COMPANY_ASSETS_FINAL_STATUS.md  COMPANY_ASSETS_GUIDE.md  COMPANY_ASSETS_RESTORED.md  COMPANY_WIDE_AVAILABILITY_GUIDE.md  COMPLETE_SUCCESS.md  CRITICAL_FIXES_SUMMARY.md  DATABASE_MIGRATION_PATIENT_AUTH.md  DEPLOYMENT.md  DEPLOYMENT_CACHE_SETUP.md  DEPLOYMENT_REMINDERS.md  DEPLOYMENT_REMINDERS_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TEST_REPORT.md  DEPLOYMENT_VIDEO_CALL_FIX.md  Dockerfile  FINAL_STATUS_REPORT.md  IOS_APP_BUILD_READY.md  LEADS_DEPLOYMENT_COMPLETE.md  MASTER_CALENDAR_COMPLETION.md  MASTER_CALENDAR_QUICK_GUIDE.md  MIGRATION_READY.md  OPTIMIZATION_SUMMARY.md  PATIENT_NOTE_ATTACHMENTS.md  PATIENT_PAGE_STATUS.md  PATIENT_VIDEO_ROOM_MOBILE_FIX.md  README.md  README_SETUP.md  REFRESH_ALL_DATA_FIX.md  (+33 more)
Pitch Deck/: SYSTEM_OVERVIEW.md
attached_assets/: Pasted--patients-2-Open-a-new-tab-to-test-authentication-and-file-uploads-Secrets-are-accessible-to-anyo-1760929934205_1760929934206.txt  Pasted--usr-bin-env-python3-COMPLETE-FIXED-VERSION-fetch-withings-data-py-with-Sleep-in-HOURS-This-r-1760919188140_1760919188141.txt  Pasted--usr-bin-env-python3-Module-1-withings-auth-py-FINAL-FIXED-VERSION-Purpose-Handles-OAuth2--1760746943300_1760746943301.txt  (+2 more)
capturecare/: .gitignore  wsgi.py  (+21 more)
(+91 files in other folders)
