[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "openai>=2.4.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "withings-api>=2.4.0",
    "stripe>=13.0.1",
]
